[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/objects/Luna.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/luna.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/Game.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/VarelaRound-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/scripts/ToolBtn.gd" type="Script" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/VarelaRound-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 44
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 111
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 111
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 61
font_data = SubResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource( 3 )

[node name="ToolsPanel" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_right = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="ToolsPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 1073.0
custom_constants/separation = 10

[node name="Header" type="Label" parent="ToolsPanel/VBoxContainer"]
margin_right = 386.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 790.5, 149 )
custom_fonts/font = SubResource( 8 )
text = "Store"
align = 1

[node name="AutoPoke" type="Button" parent="ToolsPanel/VBoxContainer"]
margin_top = 64.0
margin_right = 386.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 100 )
hint_tooltip = "test"
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="ToolsPanel/VBoxContainer/AutoPoke"]
margin_right = 386.0
margin_bottom = 100.0
rect_min_size = Vector2( 386, 100 )

[node name="TextureRect" type="TextureRect" parent="ToolsPanel/VBoxContainer/AutoPoke/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="ToolsPanel/VBoxContainer/AutoPoke/HBoxContainer"]
margin_left = 104.0
margin_right = 386.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="ToolsPanel/VBoxContainer/AutoPoke/HBoxContainer/VBoxContainer"]
margin_right = 282.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "Auto Poke"

[node name="Price" type="Label" parent="ToolsPanel/VBoxContainer/AutoPoke/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 282.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 5 )
text = "50 Pokes"

[node name="Description" type="Label" parent="ToolsPanel/VBoxContainer/AutoPoke/HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 282.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 7 )
text = "Auto pokes Luna's cheeks every 5 seconds"
autowrap = true

[node name="AhogeToucher" type="Button" parent="ToolsPanel/VBoxContainer"]
margin_top = 174.0
margin_right = 386.0
margin_bottom = 274.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="ToolsPanel/VBoxContainer/AhogeToucher"]
margin_right = 386.0
margin_bottom = 100.0
rect_min_size = Vector2( 386, 100 )

[node name="TextureRect" type="TextureRect" parent="ToolsPanel/VBoxContainer/AhogeToucher/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="ToolsPanel/VBoxContainer/AhogeToucher/HBoxContainer"]
margin_left = 104.0
margin_right = 386.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Name" type="Label" parent="ToolsPanel/VBoxContainer/AhogeToucher/HBoxContainer/VBoxContainer"]
margin_right = 282.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "Ahoge Toucher"

[node name="Price" type="Label" parent="ToolsPanel/VBoxContainer/AhogeToucher/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 282.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 5 )
text = "200 Pokes"

[node name="Description" type="Label" parent="ToolsPanel/VBoxContainer/AhogeToucher/HBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 282.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 7 )
text = "A dedicated Ahoge Toucher for your Ahoge Touching needs"
autowrap = true

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Luna" parent="CenterContainer" instance=ExtResource( 1 )]

[node name="Header" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -517.5
margin_top = 74.0
margin_right = 517.5
margin_bottom = 223.0
rect_pivot_offset = Vector2( 790.5, 149 )
custom_fonts/font = SubResource( 2 )
text = "Secret Luna Project"

[node name="PokeCounter" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -517.5
margin_top = -421.0
margin_right = 517.5
margin_bottom = -272.0
custom_fonts/font = SubResource( 3 )
text = "Pokes: 0"
align = 1

[node name="PPSCounter" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -517.5
margin_top = -261.0
margin_right = 517.5
margin_bottom = -112.0
custom_fonts/font = SubResource( 4 )
text = "per second: 0"
align = 1

[node name="Ticks" type="Timer" parent="."]
autostart = true

[connection signal="clicked" from="CenterContainer/Luna" to="." method="_on_Luna_clicked"]
[connection signal="timeout" from="Ticks" to="." method="_on_Ticks_timeout"]
